--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web:
-    image: registry.gitlab.com/gatara.ai/b2b-cold-outreach:latest
+    image: ghcr.io/sudocoder-py/b2b-outreach:latest
     command: >
       sh -c "python manage.py collectstatic --noinput &&
              gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 4"
@@ -14,7 +14,7 @@ services:
       - .env.production
 
   celery:
-    image: registry.gitlab.com/gatara.ai/b2b-cold-outreach:latest
+    image: ghcr.io/sudocoder-py/b2b-outreach:latest
     command: celery -A dcrm worker -l info
     volumes:
       - static_volume:/app/staticfiles
