--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: Debug workspace
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Listing workspace files:"
+          ls -alh
+          echo "Listing nginx/conf.d:"
+          ls -alh nginx/conf.d
       # Upload docker-compose files and .env.production to the VPS
       - name: Copy Compose files to VPS
         uses: appleboy/scp-action@v0.1.3
