--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,6 @@ jobs:
           script: |
             echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             cd ~/projects/products/campaigns/b2b-cold-outreach &&
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml down &&
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml pull --quiet &&
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+            docker-compose  -f docker-compose.prod.yml down &&
+            docker-compose  -f docker-compose.prod.yml pull --quiet &&
+            docker-compose  -f docker-compose.prod.yml up -d
