--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       sh -c "python manage.py collectstatic --noinput &&
              gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 4"
     volumes:
-      - static_volume:/app/staticfiles
+      - /root/projects/products/campaigns/b2b-cold-outreach/staticfiles:/app/staticfiles
     expose:
       - 8000
     env_file:
@@ -16,20 +16,7 @@ services:
   celery:
     image: ghcr.io/sudocoder-py/b2b-outreach:latest
     command: celery -A dcrm worker -l info
-    volumes:
-      - static_volume:/app/staticfiles
     env_file:
       - .env.production
     depends_on:
       - web
-
-  nginx:
-    image: nginx:1.25
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - static_volume:/app/staticfiles
-    ports:
-      - "8080:80"
-
-volumes:
-  static_volume:
