--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
              gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 4"
     volumes:
       - /root/projects/products/campaigns/b2b-cold-outreach/staticfiles:/app/staticfiles
-    expose:
+    ports:
       - "8000:8000"
     env_file:
       - .env.production
