ingest setup worked 0.2

--- a/docker-compose-inngest.yml
+++ b/docker-compose-inngest.yml
@@ -4,3 +4,5 @@ services:
     ports:
       - 8288:8288
     command: inngest dev -u http://host.docker.internal:8000/api/inngest --no-discovery
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
