--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,18 +11,14 @@ services:
       - static_volume:/app/staticfiles
     expose:
       - 8000
-    env_file:
-      - .env.production
 
-  celery:
-    build: .
-    command: celery -A dcrm worker -l info
-    volumes:
-      - .:/app
-    env_file:
-      - .env
-    depends_on:
-      - web
+  scheduler_server:
+    image: inngest/inngest
+    ports:
+      - 8288:8288
+    command: inngest dev -u http://host.docker.internal:8000/api/inngest --no-discovery
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   static_volume:
