--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
-
+version: '3.8'
 
 services:
   web:
     build: .
+    ports:
+      - "8000:8000"  # Maps host:container ports (add this to access from host)
+    environment:
+      - PYTHONDONTWRITEBYTECODE=1
+      - PYTHONUNBUFFERED=1
     command: >
       sh -c "python manage.py collectstatic --noinput &&
+            python manage.py migrate &&
             gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 2"
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-    expose:
-      - 8000
 
 volumes:
   static_volume:
