--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"  # Maps host:container ports (add this to access from host)
+      - "8000:8000"
+    env_file:
+      - .env  # Loads variables from .env (same dir as docker-compose.yml)
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
