--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - PYTHONUNBUFFERED=1
     command: >
       sh -c "python manage.py collectstatic --noinput &&
+            python manage.py makemigrations &&
             python manage.py migrate &&
             gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 2"
     volumes:
