--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     command: >
       sh -c "python manage.py collectstatic --noinput &&
             python manage.py makemigrations &&
+            python manage.py makemigrations clients campaign api &&
+            python manage.py migrate clients campaign api &&
             python manage.py migrate &&
             gunicorn dcrm.wsgi:application --bind 0.0.0.0:8000 --workers 2"
     volumes:
