--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "8010:8000"
     env_file:
-      - .env  # Loads variables from .env (same dir as docker-compose.yml)
+      - .env
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
@@ -21,6 +21,19 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_DB: vibereach-db-1
+      POSTGRES_USER: omar
+      POSTGRES_PASSWORD: uW9_qX9_pT8-yG4_zU1_
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
   static_volume:
+  pgdata:
