--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8010:8000"
     env_file:
-      - .env
+      - .env.blue
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
@@ -34,7 +34,7 @@ services:
     ports:
       - "8011:8000"
     env_file:
-      - .env
+      - .env.green
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
